--- a/src/index.html
+++ b/src/index.html
@@ -42,67 +42,67 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
+                    <div class="navbar-nav mr-auto">
+                        <div class="nav-item">
                             <a class="nav-link" href="/">Homepage</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button">Faculties</a>
-                            <ul class="dropdown-menu">
-                                <li>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties">Faculties</a>
+                            <div class="dropdown-menu">
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Engineering">Engineering</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button">Education &amp; research</a>
-                            <ul class="dropdown-menu">
-                                <li>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education">Education &amp; research</a>
+                            <div class="dropdown-menu">
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Master">Master</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Doctorate">Doctorate</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button">Industry &amp; partners</a>
-                            <ul class="dropdown-menu">
-                                <li>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry">Industry &amp; partners</a>
+                            <div class="dropdown-menu">
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Commercialization">Commercialization</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ur class="navbar-nav">
-                        <li class="nav-item">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="navbar-nav">
+                        <div class="nav-item">
                             <a class="nav-link" href="/login.html">Login</a>
-                        </li>
-                    </ur>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="d-lg-none">
@@ -173,17 +173,17 @@
                 <div class="p-4 mt-4 bg-white studies">
                     <div class="text-primary mb-4 title">Studies</div>
                     <p class="font-weight-bold">Advance your scientific education</p>
-                    <ul class="list-unstyled ml-3">
-                        <li>
+                    <div class="list-unstyled ml-3">
+                        <p>
                             <a href="/empty.html?title=Bachelor">Bachelor programmes</a>
-                        </li>
-                        <li>
+                        </p>
+                        <p>
                             <a href="/empty.html?title=Bachelor">Master programmes</a>
-                        </li>
-                        <li>
+                        </p>
+                        <p>
                             <a href="/empty.html?title=Continuing+education">Continuing education programmes</a>
-                        </li>
-                    </ul>
+                        </p>
+                    </div>
                 </div>
 
                 <div class="p-4 mt-4 bg-white researches">
@@ -193,24 +193,24 @@
                         <a href="/empty.html?title=Doctorate">Doctoral programmes</a>
                     </p>
                     <p class="font-weight-bold">Latest publications</p>
-                    <ul class="list-unstyled ml-3">
-                        <li>
+                    <div class="list-unstyled ml-3">
+                        <p>
                             <a href="/empty.html?title=Article">Tuo vero id quidem, inquam, arbitratu</a>
-                        </li>
-                        <li>
+                        </p>
+                        <p>
                             <a href="/empty.html?title=Article">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
-                        </li>
-                        <li>
+                        </p>
+                        <p>
                             <a href="/empty.html?title=Article">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
-                        </li>
-                        <li>
+                        </p>
+                        <p>
                             <a href="/empty.html?title=Article">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
                                 hominem, ut frueretur voluptatibus</a>
-                        </li>
-                        <li>
+                        </p>
+                        <p>
                             <a href="/empty.html?title=Article">Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia</a>
-                        </li>
-                    </ul>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
