--- a/src/login.html
+++ b/src/login.html
@@ -42,67 +42,67 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
+                    <div class="navbar-nav mr-auto">
+                        <div class="nav-item">
                             <a class="nav-link" href="/">Homepage</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button">Faculties</a>
-                            <ul class="dropdown-menu">
-                                <li>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties">Faculties</a>
+                            <div class="dropdown-menu">
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Engineering">Engineering</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button">Education &amp; research</a>
-                            <ul class="dropdown-menu">
-                                <li>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education">Education &amp; research</a>
+                            <div class="dropdown-menu">
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Master">Master</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Doctorate">Doctorate</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button">Industry &amp; partners</a>
-                            <ul class="dropdown-menu">
-                                <li>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry">Industry &amp; partners</a>
+                            <div class="dropdown-menu">
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Commercialization">Commercialization</a>
-                                </li>
-                                <li>
+                                </div>
+                                <div>
                                     <a class="dropdown-item" href="/empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ur class="navbar-nav">
-                        <li class="nav-item">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="navbar-nav">
+                        <div class="nav-item">
                             <a class="nav-link" href="/login.html">Login</a>
-                        </li>
-                    </ur>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="d-lg-none">
