--- a/src/login.html
+++ b/src/login.html
@@ -125,13 +125,13 @@
                     <ul class="sr-only" id="login-error-list"></ul>
                     <form id="login-form" novalidate>
                         <div class="form-group">
-                            <p>Email</p>
-                            <input class="form-control" id="login-email-control" type="email" placeholder="Email" required>
+                            <input class="form-control" id="login-email-control" type="email" placeholder="Email" required style="position: relative; top: 10px;">
+                            <p style="position: relative; top: -60px;">Email</p>
                             <small class="invalid-feedback"></small>
                         </div>
                         <div class="form-group">
-                            <p>Password</p>
-                            <input class="form-control" id="login-password-control" type="password" placeholder="Password">
+                            <input class="form-control" id="login-password-control" type="password" placeholder="Password" style="position: relative; top: 10px;">
+                            <p style="position: relative; top: -60px;">Password</p>
                             <small class="invalid-feedback"></small>
                         </div>
                         <div class="form-group">
