Added col span to table

--- a/src/article.html
+++ b/src/article.html
@@ -142,20 +142,16 @@
                     </caption>
                     <col>
                     <col>
-                    <col>
-                    <col>
+                    <colgroup span="2"></colgroup>
                     <thead class="thead-dark">
                         <tr>
-                            <th class="align-middle" scope="col">Century</th>
-                            <th class="align-middle" scope="col">Year</th>
-                            <th class="align-middle" scope="col">Average
-                                <br>
-                                <small>(Celcius)</small>
-                            </th>
-                            <th class="align-middle" scope="col">Smoothed
-                                <br>
-                                <small>(Celcius)</small>
-                            </th>
+                            <th class="align-middle" rowspan="2" scope="col">Century</th>
+                            <th class="align-middle" rowspan="2" scope="col">Year</th>
+                            <th class="align-middle" colspan="2" scope="colgroup">Temperature</th>
+                        </tr>
+                        <tr>
+                            <th class="align-middle" scope="col">Average</th>
+                            <th class="align-middle" scope="col">Smoothed</th>
                         </tr>
                     </thead>
                     <tbody>
