Added colgroup to table

--- a/src/article.html
+++ b/src/article.html
@@ -135,20 +135,16 @@
                 <table class="table text-center">
                     <col>
                     <col>
-                    <col>
-                    <col>
+                    <colgroup span="2"></colgroup>
                     <tbody class="thead-dark">
                         <tr>
-                            <td class="align-middle">Century</td>
-                            <td class="align-middle">Year</td>
-                            <td class="align-middle">Average
-                                <br>
-                                <small>(Celcius)</small>
-                            </td>
-                            <td class="align-middle">Smoothed
-                                <br>
-                                <small>(Celcius)</small>
-                            </td>
+                            <td class="align-middle" rowspan="2">Century</td>
+                            <td class="align-middle" rowspan="2">Year</td>
+                            <td class="align-middle" colspan="2">Temperature</td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">Average</td>
+                            <td class="align-middle">Smoothed</td>
                         </tr>
                     </tbody>
                     <tbody>
