Switched to relative path

--- a/src/index.html
+++ b/src/index.html
@@ -44,25 +44,25 @@
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <div class="navbar-nav mr-auto">
                         <div class="nav-item">
-                            <a class="nav-link" href="/">Homepage</a>
+                            <a class="nav-link" href="./">Homepage</a>
                         </div>
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties">Faculties</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Applied+sciences">Applied sciences</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Engineering">Engineering</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Engineering">Engineering</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
                                 </div>
                             </div>
                         </div>
@@ -70,16 +70,16 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education">Education &amp; research</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Bachelor">Bachelor</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Master">Master</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Master">Master</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Continuing+education">Continuing education</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Doctorate">Doctorate</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Doctorate">Doctorate</a>
                                 </div>
                             </div>
                         </div>
@@ -87,20 +87,20 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry">Industry &amp; partners</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Public+relations">Public relations</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Commercialization">Commercialization</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Commercialization">Commercialization</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="navbar-nav">
                         <div class="nav-item">
-                            <a class="nav-link" href="/login.html">Login</a>
+                            <a class="nav-link" href="./login.html">Login</a>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg">
                         <div class="media-body">
                             <div class="text-info mt-0 mb-2 subtitle">
-                                <a href="/article.html">Global temperature record</a>
+                                <a href="./article.html">Global temperature record</a>
                             </div>
                             <p>
                                 The global surface temperature relative to 1951-1980 average recently published by NASA shows that 2016 ranks as the warmest
@@ -140,7 +140,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg">
                         <div class="media-body">
                             <div class="text-info mt-0 mb-2 subtitle">
-                                <a href="/empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
+                                <a href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
                             </div>
                             <p>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
@@ -155,7 +155,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg">
                         <div class="media-body">
                             <div class="text-info mt-0 mb-2 subtitle">
-                                <a href="/empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
+                                <a href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
                             </div>
                             <p>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
@@ -175,13 +175,13 @@
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <div class="list-unstyled ml-3">
                         <p>
-                            <a href="/empty.html?title=Bachelor">Bachelor programmes</a>
+                            <a href="./empty.html?title=Bachelor">Bachelor programmes</a>
                         </p>
                         <p>
-                            <a href="/empty.html?title=Bachelor">Master programmes</a>
+                            <a href="./empty.html?title=Bachelor">Master programmes</a>
                         </p>
                         <p>
-                            <a href="/empty.html?title=Continuing+education">Continuing education programmes</a>
+                            <a href="./empty.html?title=Continuing+education">Continuing education programmes</a>
                         </p>
                     </div>
                 </div>
@@ -190,25 +190,25 @@
                     <div class="text-primary mb-4 title">Researches</div>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
-                        <a href="/empty.html?title=Doctorate">Doctoral programmes</a>
+                        <a href="./empty.html?title=Doctorate">Doctoral programmes</a>
                     </p>
                     <p class="font-weight-bold">Latest publications</p>
                     <div class="list-unstyled ml-3">
                         <p>
-                            <a href="/empty.html?title=Article">Tuo vero id quidem, inquam, arbitratu</a>
+                            <a href="./empty.html?title=Article">Tuo vero id quidem, inquam, arbitratu</a>
                         </p>
                         <p>
-                            <a href="/empty.html?title=Article">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
+                            <a href="./empty.html?title=Article">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
                         </p>
                         <p>
-                            <a href="/empty.html?title=Article">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
+                            <a href="./empty.html?title=Article">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
                         </p>
                         <p>
-                            <a href="/empty.html?title=Article">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
+                            <a href="./empty.html?title=Article">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
                                 hominem, ut frueretur voluptatibus</a>
                         </p>
                         <p>
-                            <a href="/empty.html?title=Article">Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia</a>
+                            <a href="./empty.html?title=Article">Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia</a>
                         </p>
                     </div>
                 </div>
@@ -219,11 +219,11 @@
     <div class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=About">About</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Contact+us">Contact us</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Help">Help</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Terms+of+services">Terms of service</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Privacy+policy">Privacy policy</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About">About</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Contact+us">Contact us</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Help">Help</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Terms+of+services">Terms of service</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
     </div>
