--- a/src/article.html
+++ b/src/article.html
@@ -44,25 +44,25 @@
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <div class="navbar-nav mr-auto">
                         <div class="nav-item">
-                            <a class="nav-link" href="/">Homepage</a>
+                            <a class="nav-link" href="./">Homepage</a>
                         </div>
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties">Faculties</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Applied+sciences">Applied sciences</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Engineering">Engineering</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Engineering">Engineering</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
                                 </div>
                             </div>
                         </div>
@@ -70,16 +70,16 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education">Education &amp; research</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Bachelor">Bachelor</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Master">Master</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Master">Master</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Continuing+education">Continuing education</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Doctorate">Doctorate</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Doctorate">Doctorate</a>
                                 </div>
                             </div>
                         </div>
@@ -87,20 +87,20 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry">Industry &amp; partners</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Public+relations">Public relations</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Commercialization">Commercialization</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Commercialization">Commercialization</a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="/empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="navbar-nav">
                         <div class="nav-item">
-                            <a class="nav-link" href="/login.html">Login</a>
+                            <a class="nav-link" href="./login.html">Login</a>
                         </div>
                     </div>
                 </div>
@@ -194,11 +194,11 @@
     <div class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=About">About</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Contact+us">Contact us</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Help">Help</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Terms+of+services">Terms of service</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Privacy+policy">Privacy policy</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About">About</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Contact+us">Contact us</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Help">Help</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Terms+of+services">Terms of service</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
     </div>
