Switched to relative paths

--- a/src/article.html
+++ b/src/article.html
@@ -45,25 +45,25 @@
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Homepage</a>
+                            <a class="nav-link" href="./">Homepage</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button" aria-haspopup="true" aria-expanded="false">Faculties</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-faculties">
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Applied+sciences">Applied sciences</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Engineering">Engineering</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Engineering">Engineering</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
                                 </li>
                             </ul>
                         </li>
@@ -71,16 +71,16 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button" aria-haspopup="true" aria-expanded="false">Education &amp; research</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-education">
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Bachelor">Bachelor</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Master">Master</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Master">Master</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Continuing+education">Continuing education</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Doctorate">Doctorate</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Doctorate">Doctorate</a>
                                 </li>
                             </ul>
                         </li>
@@ -88,20 +88,20 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button" aria-haspopup="true" aria-expanded="false">Industry &amp; partners</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-industry">
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Public+relations">Public relations</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Commercialization">Commercialization</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Commercialization">Commercialization</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
                                 </li>
                             </ul>
                         </li>
                     </ul>
                     <ur class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/login.html">Login</a>
+                            <a class="nav-link" href="./login.html">Login</a>
                         </li>
                     </ur>
                 </div>
@@ -201,11 +201,11 @@
     <footer class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=About">About</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Contact+us">Contact us</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Help">Help</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Terms+of+services">Terms of service</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Privacy+policy">Privacy policy</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About">About</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Contact+us">Contact us</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Help">Help</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Terms+of+services">Terms of service</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
     </footer>
