--- a/src/index.html
+++ b/src/index.html
@@ -45,26 +45,26 @@
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Homepage</a>
+                            <a class="nav-link" href="./">Homepage</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button" aria-haspopup="true"
                                 aria-expanded="false">Faculties</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-faculties">
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Applied+sciences">Applied sciences</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Engineering">Engineering</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Engineering">Engineering</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
                                 </li>
                             </ul>
                         </li>
@@ -73,16 +73,16 @@
                                 aria-expanded="false">Education &amp; research</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-education">
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Bachelor">Bachelor</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Master">Master</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Master">Master</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Continuing+education">Continuing education</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Doctorate">Doctorate</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Doctorate">Doctorate</a>
                                 </li>
                             </ul>
                         </li>
@@ -91,20 +91,20 @@
                                 aria-expanded="false">Industry &amp; partners</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-industry">
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Public+relations">Public relations</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Commercialization">Commercialization</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Commercialization">Commercialization</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
                                 </li>
                             </ul>
                         </li>
                     </ul>
                     <ur class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/login.html">Login</a>
+                            <a class="nav-link" href="./login.html">Login</a>
                         </li>
                     </ur>
                 </div>
@@ -132,7 +132,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg" alt="Photo of an iceberg">
                         <div class="media-body">
                             <h3 class="text-info mt-0 mb-2" id="article-1">
-                                <a href="/article.html">Global temperature record</a>
+                                <a href="./article.html">Global temperature record</a>
                             </h3>
                             <p>
                                 The global surface temperature relative to 1951-1980 average recently published by NASA shows that 2016 ranks as the warmest
@@ -147,7 +147,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photo of a galaxy">
                         <div class="media-body">
                             <h3 class="text-info mt-0 mb-2" id="article-2">
-                                <a href="/empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
+                                <a href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
                             </h3>
                             <p>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
@@ -162,7 +162,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="Photo of a robot">
                         <div class="media-body">
                             <h3 class="text-info mt-0 mb-2" id="article-3">
-                                <a href="/empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
+                                <a href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
                             </h3>
                             <p>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
@@ -182,13 +182,13 @@
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <ul class="list-unstyled ml-3">
                         <li>
-                            <a href="/empty.html?title=Bachelor">Bachelor programmes</a>
+                            <a href="./empty.html?title=Bachelor">Bachelor programmes</a>
                         </li>
                         <li>
-                            <a href="/empty.html?title=Bachelor">Master programmes</a>
+                            <a href="./empty.html?title=Bachelor">Master programmes</a>
                         </li>
                         <li>
-                            <a href="/empty.html?title=Continuing+education">Continuing education programmes</a>
+                            <a href="./empty.html?title=Continuing+education">Continuing education programmes</a>
                         </li>
                     </ul>
                 </section>
@@ -197,25 +197,25 @@
                     <h2 class="text-primary mb-4">Researches</h2>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
-                        <a href="/empty.html?title=Doctorate">Doctoral programmes</a>
+                        <a href="./empty.html?title=Doctorate">Doctoral programmes</a>
                     </p>
                     <p class="font-weight-bold">Latest publications</p>
                     <ul class="list-unstyled ml-3">
                         <li>
-                            <a href="/empty.html?title=Article">Tuo vero id quidem, inquam, arbitratu</a>
+                            <a href="./empty.html?title=Article">Tuo vero id quidem, inquam, arbitratu</a>
                         </li>
                         <li>
-                            <a href="/empty.html?title=Article">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
+                            <a href="./empty.html?title=Article">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
                         </li>
                         <li>
-                            <a href="/empty.html?title=Article">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
+                            <a href="./empty.html?title=Article">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
                         </li>
                         <li>
-                            <a href="/empty.html?title=Article">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
+                            <a href="./empty.html?title=Article">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
                                 hominem, ut frueretur voluptatibus</a>
                         </li>
                         <li>
-                            <a href="/empty.html?title=Article">Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia</a>
+                            <a href="./empty.html?title=Article">Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia</a>
                         </li>
                     </ul>
                 </section>
@@ -226,11 +226,11 @@
     <footer class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=About">About</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Contact+us">Contact us</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Help">Help</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Terms+of+services">Terms of service</a>
-                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Privacy+policy">Privacy policy</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About">About</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Contact+us">Contact us</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Help">Help</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Terms+of+services">Terms of service</a>
+                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
     </footer>
